# cours_qt6

./: .gitignore  guide pyQt6.url  prerequis.md  support.pptx
.cursor/rules/: general_rules.mdc
TPs/1_introduction/: tp1.md  tp2.md  tp3.md  tp4.md
TPs/2_principes_generaux/: tp1.md  tp2.md  tp3.md  tp4.md
TPs/3_strategies_placement/: tp1.md  tp3.md  tp4.md
TPs/4_qt_designer/: tp1.md  tp2.md
TPs/4_traitement_evenements/: tp3.md
TPs/5_architecture_mvc/: tp1.md  tp2.md  tp3.md  tp4.md
TPs/6_aspects_avances/: tp1.md  tp2.md  tp3.md  tp4.md
TPs/6_qt_designer/: tp1.md  tp2.md
TPs/7_aspects_avances/: tp3.md  tp4.md
TPs/8_projets_pratiques/: tp1.md  tp3.md
TPs/architecture_mvc/: tp1.md  tp2.md
TPs/aspects_avances/: tp2.md
TPs/introduction/: tp2.md  tp3.md
TPs/principes_generaux/: tp2.md
TPs/projets_pratiques/: tp2.md  tp4.md
TPs/qt_designer/: tp3.md  tp4.md
TPs/strategies_placement/: tp2.md
TPs/traitement_evenements/: tp1.md  tp2.md  tp4.md
cours/: 1_introduction.md  2_principes_generaux.md  3_strategies_placement.md  4_qt_designer.md  4_traitement_evenements.md  5_architecture_mvc.md  6_aspects_avances.md  6_qt_designer.md  7_aspects_avances.md  8_projets_pratiques.md  Concept_generaux.md  Introduction.docx  introduction.md
cursor_rules/: docker.mdc  python.mdc
cursor_rules/libs/: pyside.mdc  pytest.mdc
prompt/: system.txt
qt/hello_world/: .gitignore  pyproject.toml
qt/hello_world/src/: constants.py  main.py  model.py  observer.py  presenter.py  style.css  view.py
qt/qttrain/: pyproject.toml
qt/qttrain/.cursor/rules/: css.mdc
qt/qttrain/src/: main.py
qt/qttrain/src/domain/controllers/: city_controller.py
qt/qttrain/src/domain/models/: building.py  city.py
qt/qttrain/src/gui/: main_window.py
qt/qttrain/src/gui/widgets/: building_panel.py  city_grid.py  stats_panel.py
